# BitFusion_using_MLIR

./: README.md
bitfusion/: CMakeLists.txt
bitfusion/bitfusion-opt/: CMakeLists.txt  bitfusion-opt.cpp
bitfusion/bitfusion-translate/: CMakeLists.txt  bitfusion-translate.cpp
bitfusion/include/: CMakeLists.txt
bitfusion/include/BitFusion/: BitFusionOps.h  BitFusionOps.td  CMakeLists.txt  InitAll.h
bitfusion/include/BitFusion-c/: Dialects.h
bitfusion/include/BitFusion/Conversion/: AffineToBitFusion.h  CMakeLists.txt  Conversion.h  Passes.h  Passes.td
bitfusion/lib/: CMakeLists.txt  InitAll.cpp
bitfusion/lib/BitFusion/: BitFusionOps.cpp  CMakeLists.txt
bitfusion/lib/CAPI/: CMakeLists.txt  Dialects.cpp
bitfusion/lib/Conversion/: AffineToBitFusion.cpp  CMakeLists.txt
bitfusion/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
bitfusion/test/BitFusion/: bitfusion-opt.mlir  bitfusion-translate.mlir  dummy.mlir  dummy1.mlir  dummy1_wrong_syn.mlir  matmul.mlir  matmul_quant.mlir
bitfusion/test/CAPI/: CMakeLists.txt  bitfusion-capi-test.c
